# zelos-extension-templates

./: .gitignore  CONTRIBUTING.md  Justfile  README.md
.github/workflows/: ci.yaml  release.yaml
agent/python/: template.toml
agent/python/template/: .gitignore  CONTRIBUTING.md  Justfile  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
agent/python/template/.github/workflows/: CI.yml  release.yml
agent/python/template/extension/: __init__.py  extension.py
app/react/: template.toml
app/react/template/: .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Justfile  README.md  eslint.config.mjs  extension.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/react/template/.github/: dependabot.yml
app/react/template/.github/workflows/: CI.yml  release.yml
app/react/template/src/: App.test.tsx  App.tsx  index.css  main.tsx
