[project]
name = "{{ name }}"
version = "0.1.0"
{% if description %}
description = "{{ description | toml_escape }}"
{% endif %}
{% if author and email %}
authors = [{ name = "{{ author | toml_escape }}", email = "{{ email | toml_escape }}" }]
{% elif author %}
authors = [{ name = "{{ author | toml_escape }}" }]
{% endif %}
readme = "README.md"
license = { text = "MIT" }
requires-python = ">={{ python_version }}"
keywords = ["zelos", "extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "zelos-sdk",
]

{% if repository %}
[project.urls]
Homepage = "{{ repository }}"
Repository = "{{ repository }}"
Issues = "{{ repository }}/issues"
Documentation = "https://docs.zeloscloud.io/extensions"
{% endif %}

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "tomli>=2.3.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.9.5"

[tool.hatch.build.targets.wheel]
packages = ["{{ project_slug }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"

[tool.ruff]
target-version = 'py{{ python_version | replace(".", "") }}'
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "B008",   # function call in defaults (common in decorators)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
